<resources>
    <string name="app_name">JerboApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="health">Health:</string>
    <string name="stamina">Stamina:</string>
    <string name="oxygen">Oxygen:</string>
    <string name="food">Food:</string>
    <string name="weight">Weight:</string>
    <string name="damage">Damage:</string>
    <string name="speed">Speed:</string>
    <string name="torpidity">Torpidity:</string>
    <string name="level">Level</string>
    <string name="wild">Wild</string>
    <string name="tamed">Tamed</string>
    <string name="breeded">Breeded</string>
    <string name="effect">Effectiveness</string>
    <string name="average_0">Average: 0</string>
    <string name="checkBtn">Check</string>
    <string name="imprint">Imprint %</string>
    <string name="wasted">Wasted:</string>
    <string name="average">Average: "</string>
    <string name="level_nedeed">Please indicate the level</string>
    <string name="status_nedeed">Please indicate status</string>
    <string name="imprint_nedeed">Please indicate imprint percentage</string>
    <string name="effectiveness_nedeed">Please indicate taming effectiveness percentage</string>
    <string name="health_nedeed">Please indicate the Health Points</string>
    <string name="stamina_nedeed">Please indicate the Stamina Points</string>
    <string name="oxygen_nedeed">Please indicate the Oxygen Points</string>
    <string name="food_nedeed">Please indicate the Food Points</string>
    <string name="wight_nedeed">Please indicate the Weight Points</string>
    <string name="damage_nedeed">Please indicate the Damage Points</string>
    <string name="speed_nedeed">Please indicate the Speed Points</string>
    <string name="torpidity_nedeed">Please indicate the Torpidity Points</string>
    <string name="stats_error_dialog_message">Something went wrong. Check the data. Remember that if you leveled up any stat of your Dino, it won\'t work!</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_dialog_message">This Dino is going to be add to your collection. Are you sure?</string>
    <string name="adding">Adding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete_dialog_message">You are going to delete this Dino. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_dialog_message">You are going to delete all Dinos. Are you sure?</string>
    <string name="part1_edit_dialog_message">"The actual name is "</string>
    <string name="part2_edit_dialog_message">. Please put a new name.</string>
    <string name="edit_dialog_title">Editing name</string>
    <string name="name">Name</string>
</resources>